basic idea in zn vernieuwde versie
deels

--- a/committee.tex
+++ b/committee.tex
@@ -1021,36 +1021,123 @@ This chapter is structured as follows.
 
 \section{The basic idea}\label{sec:basic-idea}
 
-The goal of this chapter is to give a theoretical account for the crosslinguistic variation found in headless relatives. It should derive how languages differ in whether they allow the internal case and the external case to surface when either of them wins the case competition. In other words, the chapter gives the theoretical counterparts of the descriptive parameters given in Figure \ref{fig:two-parameters}. This section gives the basic idea behind my proposal. Throughout the rest of the chapter I motivate my proposal, and I illustrate it with examples. Before I can describe the theoretical counterparts, I need to introduce some concepts: the internal element and external element and the base of these elements.
+In terms of the committee I introduced in Section X, what criteria does the committee use to decide whether the internal or external case is allowed to surface in a particular language?
 
-I start with the internal and external element. In the thesis so far, I stated that the relative pronoun appears in the case that wins the case competition. I have not been explicit about where the case competition takes place. In order to avoid introducing theoretical machinery just for case competition situations, I assume it takes place in syntax. I propose that at some point in the derivation headless relatives have an internal and an external element.\footnote{
-I am far from the only one that assumes this. Himmelreich, Hanink, but also Bresnan/Grimshaw, Groos/Riemsdijk, Harbert..
-} The internal element bears the internal case, and the external element bears the external case. At the end of the derivation, the element bearing the more complex case surfaces as the relative pronoun, at least if the element is allowed to surface.
+This section gives the basic idea behind my proposal. Throughout the rest of the chapter I motivate my proposal, and I illustrate it with examples. First I discuss my assumption that headless relatives are derived from light-headed relatives. The light head bears the external case, and the relative pronoun bears the internal case. Then I introduce the internal structure of the light head and the relative pronoun. An element is allowed to surface when it contains all constituents that of the other element.
 
-Now I turn to the so-called base of the internal and external element. The internal and the external element do not only consist of case features. They also contain other features. These other features have to do with referentiality, number, gender, definiteness, etc. I call the part of the internal and external element that corresponds to these features the base part. I refer to the part that corresponds to the case features as the case part.
+In the thesis so far, I stated that the relative pronoun appears in the case that wins the case competition. I have not been explicit about where the case competition takes place. In order to avoid introducing theoretical machinery just for case competition situations, I assume it takes place in syntax.
+Specifically, I propose that headless relatives are derived from light-headed relative clauses.\footnote{
+I am far from the only one that does that cf.
+} In a light-headed relative clause, the head of a relative is not a full noun phrase, but it is a bit `lighter': the noun itself is absent.
 
-Table \ref{tbl:component-elements} summarizes what I just laid out. At some point in the derivation, headless relatives contain an internal and an external element. The internal element consists of an internal base part and an internal case part. The external element consists of an external base part and an external case part.
-There are three options for the relative pronoun. First, it can appear as the internal element: as the internal base plus the internal case. Second, it can appear as the external element: as the external base plus the external case. Third, there is no grammatical case for the relative pronoun.
+Consider the light-headed relative in \ref{ex:ohg-double}.
+\tit{Thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the light head of the relative clause. This is the element that appears in the external case, the case that reflects the grammatical role in the main clause.
+\tit{Then} `\tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc}' is the relative pronoun of the relative clause. This is the element that appears in the internal case, the case that reflects the grammatical role within the relative clause.
+
+\exg. eno nist thiz thér then ir suochet zi arslahanne?\\
+ now {not be.3\ac{sg}} \tsc{dem}.\tsc{sg}.\tsc{n}.\tsc{nom} \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}
+ \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} 2\ac{pl}.\tsc{nom} seek.2\tsc{pl} to kill.\tsc{inf}.\ac{sg}.\tsc{dat}\\
+ `Isn't this now the one, who you seek to kill?'\label{ex:ohg-double}
+
+In my proposal, the difference between a light headed relative and a headless relative is that in a headless relative either the light head or the relative pronoun does not surface. The surfacing element is the one that bears the winning case, and the absent element is the one that bears the losing case. This means that what I have been glossing as and calling the relative pronoun, so far, is sometimes actually the light head. To reflect that, I call the surfacing element from now on the surface pronoun.
+
+This is more or less what is going on in a non-matching type language as Old High German. However, more needs to be said about other types of languages. As I showed in Chapter \ref{ch:typlogy}, other languages types do not allow the internal or external case to surface when either of them wins the case competition. In an internal-only type language as Modern German, the more complex case is only allowed to surface when it is the internal case, and it is not allowed to surface when it is the external case. In a matching type language as Polish allows neither the internal nor the external case to surface. In these cases, it is neither the light head nor the relative pronoun that surfaces, but the construction is simply ungrammatical.
+
+Table \ref{tbl:options-surface-pronoun} summarizes what I just laid out.
+There are three options for the surface pronoun. First, the surface pronoun can appear as the relative pronoun and bear the internal case. Second, the surface pronoun can appear as the light head and bear external case. Third, there is no grammatical form for the surface pronoun.
 
 \begin{table}[H]
   \center
-  \caption{Components of the internal and external element}
-\begin{tabular}{cccccc}
+  \caption{Options for the surface pronoun}
+\begin{tabular}{ccc}
   \toprule
-\multicolumn{2}{c}{\tsc{int} element} & \multicolumn{2}{c}{\tsc{ext} element} & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
-\cmidrule(lr){1-2}                      \cmidrule(lr){3-4}                    \cmidrule(lr){5-6}
-base\scsub{int} & case\scsub{int}     & base\scsub{ext} & case\scsub{ext}     & base\scsub{int} & case\scsub{int}     \\
-                &                     &                 &                     & base\scsub{ext} & case\scsub{ext}     \\
-                &                     &                 &                     & \multicolumn{2}{c}{*}                 \\
+surface pronoun             \\
+\cmidrule(lr){1-1}
+relative pronoun\scsub{int} \\
+light head\scsub{ext}       \\
+{*}                         \\
 \bottomrule
 \end{tabular}
-\label{tbl:component-elements}
+\label{tbl:options-surface-pronoun}
 \end{table}
+
+The second column shows the situation in which the internal case is the most complex, and the surface pronoun is the relative pronoun that bears the internal case. The third column shows the situation in which the external case is the most complex, and the surface pronoun is the light head that bears the external case.
+Old High German allows both the internal case and the external case to surface when either of them wins the case competition. The surface pronoun can be either the relative pronoun or the light head.
+Modern German allows only the internal case to surface when it wins the case competition, and it does not allow the external case to do so. The surface pronoun can only be the relative pronoun and not the light head.
+Polish allows neither the internal nor the external case to surface when either of them wins the case competition. The surface pronoun can neither be the relative pronoun nor the light head.
+
+\begin{table}[H]
+  \center
+  \caption{Overview of languages}
+\begin{tabular}{ccc}
+  \toprule
+                 & \tsc{int} > \tsc{ext}        & \tsc{int} < \tsc{ext} \\
+                 & relative pronoun\scsub{int}  & light head\scsub{ext} \\
+                      \cmidrule{1-3}
+Old High German  & ✔                            & ✔                   \\
+Modern German    & ✔                            & *                   \\
+Polish           & *                            & *                   \\
+\bottomrule
+\end{tabular}
+\label{tbl:overview}
+\end{table}
+
+
+
+
+% (\citealt{fuss2014,hanink2018} argue the same but for Modern German).\footnote{
+% A difference with Modern German is that there can only be a single element when the cases match. In Section \ref{ch:discussion} I return to the point why Modern German does not have non-matching headless relatives that look like Old High German, although it still has syncretic relative pronouns and light heads.
+% }).
+%
+% \footnote{
+% I am far from the only one that assumes this. Himmelreich, Hanink, but also Bresnan/Grimshaw, Groos/Riemsdijk, Harbert..
+% }
+
+Now I turn to the so-called base of the internal and external element. The internal and the external element do not only consist of case features. They also contain other features. These other features have to do with referentiality, number, gender, definiteness, etc. I call the part of the internal and external element that corresponds to these features the base part. I refer to the part that corresponds to the case features as the case part.
+
+
 
 
 Now I have introduced the concepts internal and external element and their bases, I turn to the basic idea behind my proposal. The goal is to give a theoretical account that derives whether a language allows the internal or external case to surface when it wins the case competition or whether it does not.
 
 Every constituent of the element that bears the winning case needs to contain every constituent of the element that bears the losing case.
+
+
+\begin{table}[H]
+  \center
+ \caption {Relative pronoun and light head}
+  \begin{tabular}[b]{ccc}
+      \toprule
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{rel}P
+                [\tsc{rel}, roof]
+            ]
+            [\tsc{k}P,
+                [\tsc{k}]
+                [ϕP
+                    [\phantom{x}ϕ\phantom{x}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{k}P,
+            [\tsc{k}]
+            [ϕP
+                [\phantom{x}ϕ\phantom{x}, roof, baseline]
+            ]
+        ]
+      \end{forest}\\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      relative pronoun & & light head \\
+      \bottomrule
+  \end{tabular}
+\end{table}
+
+
+
 
 
 \ex. \tsc{int} \tsc{nom}\\
@@ -1114,121 +1201,12 @@ In the comparison, I rely on containment, just as I did in Chapter \ref{ch:decom
 I apply the same reasoning in comparing the internal and external base. When the internal base contains the features of the external base, the internal element is allowed to surface. When the external base contains the features of the internal base, the external element is allowed to surface.
 %at first sight this seems very much related to what Hanink proposes for Modern German. Something is non-pronounced if it contains the features. A crucial difference here is that she formulates it in terms of context sensitive rules, but she does not motivate where these rules come from. I do not have language-specific rules.
 
-I illustrate this proposal by showing how this plays out in three different languages. Table \ref{tbl:overview} gives an overview.
-In Old High German, the internal base contains the external base, and the external base contains the internal base. Therefore, Old High German allows for matching cases, it allows the internal case to win, and it allows the external case to win.
-In Modern German, the internal base contains the external base, but the external base does not contain the internal base. Therefore, Modern German allows for matching cases, and it allows the internal case to win.
-In Polish, the internal base does not contain the external base, and the external base does not contain the internal base. Still, Polish only allows for matching cases.\footnote{
-Later I explain how this is possible.
-}%why is this possible? If I follow my own system, I'm saying the one base needs to contain the other in order for the example to be grammatical. That is not the situation here: the internal base is not contained in the external one, but still the internal element surfaces! What is different, however, is that there is no competition taking place. There is a tie. So then this chapter should be only about the cases in which there are non-matches. There should be an independent mechanism that makes sure matching cases are always grammatical.. which is the same mechanism that lets non-matching but syncretic cases be grammatical, which I do not talk about in depth
+Taking this all together, there are two things going on headless relatives: case competition and constituent comparison. Case competition determines which case wins and constituent comparison determines whether this case is allowed to surface.
+I put this in the metaphor with the committee that I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition, and it can either approve this case or not approve it. The information that the committee uses for its decision is the comparison of the constituents within the relative pronoun and the light head. The committee approves the winning case if all constituents of the element associated with the winning case contains all constituents associated with the losing case.
 
-\begin{table}[H]
-  \center
-  \caption{Overview of languages}
-\begin{tabular}{cccc}
-  \toprule
-                & \tsc{int} = \tsc{ext} & \tsc{int} > \tsc{ext} & \tsc{int} < \tsc{ext} \\
-                      \cmidrule{1-4}
-Old High German & ✔                     & ✔                     & ✔                   \\
-Modern German   & ✔                     & ✔                     & *                   \\
-Polish          & ✔                     & *                     & *                   \\
-\bottomrule
-\end{tabular}
-\label{tbl:overview}
-\end{table}
-
-In what follows I discuss these three situations in the three languages.
-In the first situation (\tsc{int} = \tsc{ext}), the internal and external case match.
-In the second situation (\tsc{int} > \tsc{ext}), the internal case is more complex than the external case.
-In the third situation (\tsc{int} < \tsc{ext}), the internal case is more complex than the external case.
-
-Table \ref{tbl:basic-ohg} shows the three situation for Old High German. In Old High German, the internal base consists of features that correspond to the morpheme \tit{dh}, and so does the external base. The nominative case consists of features that correspond to the morpheme \tit{er}, and the accusative case consists of features that correspond to the morpheme \tit{en}. I motivate this in Section \ref{sec:deriving-only-internal}.
-
-The first row shows the situation in which the internal nominative case matches the external nominative case (\tsc{int} = \tsc{ext}). The internal case part, which corresponds to the nominative \tit{er} morpheme, contains the external case part, which corresponds to the nominative \tit{er} morpheme. The internal base part, which corresponds to the morpheme \tit{dh}, contains the external base part, which corresponds to the morpheme \tit{dh} too. The relative pronoun that surfaces is the internal element with its internal base and its internal case: \tit{dher}.
-
-The second row shows the situation in which internal accusative case is more complex than the external nominative case (\tsc{int} > \tsc{ext}). The internal case part, which corresponds to the accusative \tit{en} morpheme, contains the external case part, which corresponds to the nominative \tit{er} morpheme. The internal base part, which corresponds to the morpheme \tit{dh}, contains the external base part, which corresponds to the morpheme \tit{dh} too. The relative pronoun that surfaces is the internal element with its internal base and its internal case: \tit{dher}.
-
-The third row shows the situation in which external accusative case is more complex than the internal nominative case (\tsc{int} < \tsc{ext}). The external case part, which corresponds to the accusative \tit{en} morpheme, contains the internal case part, which corresponds to the nominative \tit{er} morpheme. The external base part, which corresponds to the morpheme \tit{dh}, contains the internal base part, which corresponds to the morpheme \tit{dh} too. The relative pronoun that surfaces is the external element with its external base and its external case: \tit{dhen}.
-
-\begin{table}[H]
-  \center
-  \caption{Base comparison in Old High German}
-\begin{tabular}{ccccccc}
-  \toprule
-                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
-                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
-                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
-                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
-\tsc{int} = \tsc{ext} & dhe & r                                 & dhe & r                               & dhe & r                           \\
-\tsc{int} > \tsc{ext} & dhe & n                                 & dhe & r                               & dhe & n                           \\
-\tsc{int} < \tsc{ext} & dhe & r                                 & dhe & n                               & dhe & n                           \\
-\bottomrule
-\end{tabular}
-\label{tbl:basic-ohg}
-\end{table}
-
-Table \ref{tbl:basic-mg} shows the three situation for Modern German. In Modern German, the internal base consists of features that correspond to the morpheme \tit{we}. The external base does not consist of any features, so there is no morpheme that corresponds to it.\footnote{
-Actually, not entirely, see footnote \ref{fn:base}.
-} The nominative case consists of features that correspond to the morpheme \tit{r}, and the accusative case consists of features that correspond to the morpheme \tit{n}.
-I motivate this in Section \ref{sec:deriving-only-internal}.
-
-The first row shows the situation in which the internal nominative case matches the external nominative case (\tsc{int} = \tsc{ext}). The internal case part, which corresponds to the nominative \tit{r} morpheme, contains the external case part, which corresponds to the nominative \tit{r} morpheme. The internal base part, which corresponds to the morpheme \tit{we}, contains the external base part, because there is no morpheme. The relative pronoun that surfaces is the internal element with its internal base and its internal case: \tit{wer}.
-
-The second row shows the situation in which internal accusative case is more complex than the external nominative case (\tsc{int} > \tsc{ext}). The internal case part, which corresponds to the accusative \tit{n} morpheme, contains the external case part, which corresponds to the nominative \tit{r} morpheme. The internal base part, which corresponds to the morpheme \tit{we}, contains the external base part, because there is no morpheme. The relative pronoun that surfaces is the internal element with its internal base and its internal case: \tit{wer}.
-
-The third row shows the situation in which external accusative case is more complex than the internal nominative case (\tsc{int} < \tsc{ext}). The external case part, which corresponds to the accusative \tit{n} morpheme, contains the internal case part, which corresponds to the nominative \tit{r} morpheme. The external base part, which is empty, does not contain the internal base part, which corresponds to the morpheme \tit{we}. The winner of the case competition is the external case, but the external base does not contain the internal base, so there is no grammatical relative pronoun.
-
-\begin{table}[H]
-  \center
-  \caption{Base comparison in Modern German}
-\begin{tabular}{ccccccc}
-  \toprule
-                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
-                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
-                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
-                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
-\tsc{int} = \tsc{ext} & we & r                                  &  & r                                  & we & r                           \\
-\tsc{int} > \tsc{ext} & we & n                                  &  & r                                  & we & n                           \\
-\tsc{int} < \tsc{ext} & we & r                                  &  & n                                  & \multicolumn{2}{c}{\tsc{*}}      \\
-\bottomrule
-\end{tabular}
-\label{tbl:basic-mg}
-\end{table}
-
-Table \ref{tbl:basic-polish} shows the three situation for Polish. In Polish, the internal base consists of features that correspond to the morpheme \tit{ko}. The external base consists of features that correspond to the morpheme \tit{te}.
-The accusative case consists of features that correspond to the morpheme \tit{go}, and the dative case consists of features that correspond to the morpheme \tit{mu}.
-I motivate this in Section \ref{sec:deriving-matching}.
-
-The first row shows the situation in which the internal nominative case matches the external nominative case (\tsc{int} = \tsc{ext}). The internal case part, which corresponds to the accusative \tit{go} morpheme, contains the external case part, which corresponds to the accusative \tit{go} morpheme. The internal base part, which corresponds to the morpheme \tit{ko}, does not contain the internal base part, which corresponds to the morpheme \tit{te}. Still, the relative pronoun that surfaces is the internal element with its internal base and its internal case: \tit{kogo}.\footnote{
-This is unexpected, and I talk about that later.
-}
-
-The second row shows the situation in which internal dative case is more complex than the external accusative case (\tsc{int} > \tsc{ext}). The internal case part, which corresponds to the dative \tit{mu} morpheme, contains the external case part, which corresponds to the accusative \tit{go} morpheme. The internal base part, which corresponds to the morpheme \tit{ko}, does not contain the internal base part, which corresponds to the morpheme \tit{te}. The winner of the case competition is the internal case, but the internal base does not contain the external base, so there is no grammatical relative pronoun.
-
-The third row shows the situation in which external dative case is more complex than the internal accusative case (\tsc{int} > \tsc{ext}). The external case part, which corresponds to the dative \tit{mu} morpheme, contains the internal case part, which corresponds to the accusative \tit{go} morpheme. The external base part, which corresponds to the morpheme \tit{te}, does not contain the internal base part, which corresponds to the morpheme \tit{ko}. The winner of the case competition is the external case, but the external base does not contain the internal base, so there is no grammatical relative pronoun.
-
-\begin{table}[H]
-  \center
-  \caption{Base comparison in Polish}
-\begin{tabular}{ccccccc}
-  \toprule
-                      & \multicolumn{2}{c}{\tsc{int} element}  & \multicolumn{2}{c}{\tsc{ext} element}  & \multicolumn{2}{c}{\tsc{rel} pronoun} \\
-                        \cmidrule(lr){2-3}                        \cmidrule(lr){4-5}                      \cmidrule(lr){6-7}
-                      & base\scsub{int} & case\scsub{int}       & base\scsub{ext} & case\scsub{ext}     & base\scsub{rel} & case\scsub{rel} \\
-                        \cmidrule(lr){2-2}    \cmidrule(lr){3-3}  \cmidrule(lr){4-4} \cmidrule(lr){5-5}   \cmidrule(lr){6-6} \cmidrule(lr){7-7}
-\tsc{int} = \tsc{ext} & ko & go                                  & te & go                              & ko & go                           \\
-\tsc{int} > \tsc{ext} & ko & mu                                  & te & go                              & \multicolumn{2}{c}{\tsc{*}}       \\
-\tsc{int} < \tsc{ext} & ko & go                                  & te & mu                              & \multicolumn{2}{c}{\tsc{*}}       \\
-\bottomrule
-\end{tabular}
-\label{tbl:basic-polish}
-\end{table}
-
-Taking this all together, there are two competitions taking place in headless relatives: case competition and base competition. Case competition determines which case wins and base competition determines whether this case is allowed to surface.
-I put this in the metaphor with the committee that I introduced in Section \ref{sec:possible-patterns}. The committee learns who wins the case competition, and it can either approve this case or not approve it. The information that the committee uses for its decision is the comparison between the internal and the external base. The committee approves the winning case if the base associated with it contains the base associated with the losing case.
-
-In sum, a relative pronoun can surface in the internal case if the internal case and base contains the external case and base.
-It works the same the other way around: a relative pronoun can surface in the external case if the external case and base contain the internal case and base.
-Notice that there is a crucial difference between comparing the cases and comparing the bases. The internal and external case can differ from sentence to sentence. The internal and external base remain stable throughout the language.
+% In sum, a relative pronoun can surface in the internal case if the internal case and base contains the external case and base.
+% It works the same the other way around: a relative pronoun can surface in the external case if the external case and base contain the internal case and base.
+% Notice that there is a crucial difference between comparing the cases and comparing the bases. The internal and external case can differ from sentence to sentence. The internal and external base remain stable throughout the language.
 
 
 
